[package]
name = "rmatrix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
crossbeam-channel = "0.5.8"
crossterm = "0.22.1"
ctrlc = "3.2.5"
mpsc = "0.1.0"
rand = "0.8.5"
scopeguard = "1.1.0"
